<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PoliInfo Reader</string>
    <string name="button_ok">OK</string>
    
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_intent_failed">Intent failed!</string>
    
    <string name="preferences_name">Settings</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
	<string name="preferences_play_beep_title">Beep</string>
	<string name="preferences_vibrate_title">Vibrate</string>
	<string name="preferences_login_title">Login info</string>
	<string name="preferences_login_info">Account informations</string>
	<string name="preferences_login_user">username</string>
	<string name="preferences_login_pass">pass</string>
	<string name="preferences_login_summary">If you have a user name, you will receive information specific to your role.</string>
	<string name="preferences_advanced">Advanced</string>
	<string name="preferences_clear_cache_title">Clear cache</string>
	<string name="preferences_clear_cache_summary">May be used either to free space or to refresh the data.</string>
	<string name="preferences_cache_cleared">Cache cleared!</string>
	
	<string name="splash_authenticating">Please wait while authenticating as </string>
	<string name="splash_authenticated">[Success] Authenticated as </string>
	<string name="splash_client_error">[Client Error]</string>
	<string name="splash_client_protocol_error">[Client Protocol Error]</string>
	<string name="splash_communication_error">[Communication Error]</string>
	<string name="splash_error">Check your Internet connection and press Rety!</string>
	<string name="splash_retry">Retry</string>
	<string name="splash_retrying">Retrying to authenticate... please wait</string>
	
	<string name="display_name">Information</string>
	<string name="sticker_image_feeder_url">https://and2sticker.appspot.com//stickerImageFeeder</string>
	<string name="auth_url">https://and2sticker.appspot.com//newSession</string>
	<string name="feeder_url">https://and2sticker.appspot.com//feeder</string>
	<string name="feed_generator_url">https://and2sticker.appspot.com//feedGenerator</string>
	<string name="waiting_name">Waiting for feed</string>
	<string name="preferences_user_title">Username</string>
	<string name="preferences_pass_title">Password</string>
	<string name="preferences_login_now_button">Login</string>
	<string name="preferences_login_save_button">Just save</string>
	<string name="preferences_login_cancel_button">Cancel</string>
	<string name="display_wait_item">Waiting for the first item of the feed</string>
	<string name="display_empty_feed">Empty feed! This tag is probably not supported.</string>
	<string name="display_failed_request">Failed to issue request</string>
</resources>
